# scp_stage2_pd

./: Makefile  README.md  pyproject.toml
configs/: config.yaml  full.yaml  full_48gb.yaml  full_80gb.yaml  full_96gb.yaml  full_96gb_alwaysgood_gemma4_cpt.yaml  full_96gb_alwaysgood_qwen3_4b_cpt.yaml  full_96gb_alwaysgood_qwen3_5_4b_cpt.yaml  full_96gb_alwaysgood_qwen3_5_4b_cpt_half_lr.yaml  full_96gb_gemma4.yaml  full_96gb_qwen3.5_4b.yaml  full_96gb_qwen3_4b.yaml  full_96gb_unsloth_gemma_4_e2b.yaml  full_96gb_unsloth_qwen3_4b_base.yaml  full_96gb_unsloth_qwen3_5_4b_base.yaml  full_eval_oom_probe_48gb.yaml  full_eval_oom_probe_80gb.yaml  full_eval_oom_probe_96gb.yaml  gemma4-st2.yaml  lora.yaml  qwen3-st2.yaml  qwen35-st2.yaml
configs/data/: korean_financial_cpt.yaml  korean_financial_plus_rlhf.yaml  korean_rlhf_content_filtered.yaml  parallel_wmt24pp_flores.yaml
configs/evaluation/: gpu48.yaml  gpu80.yaml  gpu96.yaml
configs/finetune/: full.yaml  lora.yaml
configs/logging/: none.yaml  wandb.yaml
configs/model/: alwaysgood_gemma4_cpt.yaml  alwaysgood_gemma4_st1.yaml  alwaysgood_qwen35_st1.yaml  alwaysgood_qwen3_4b_cpt.yaml  alwaysgood_qwen3_5_4b_cpt.yaml  alwaysgood_qwen3_5_4b_cpt_half_lr.yaml  alwaysgood_qwen3_st1.yaml  gemma3_4b.yaml  gemma_4_e2b.yaml  qwen3_4b_base.yaml  qwen3_5_4b_base.yaml  template.yaml
configs/preprocessing/: default.yaml
notebooks/: eval120_stage2_sequential.ipynb
scripts/: ensure_causal_conv1d.sh  verify_cuda_kernels.sh
src/: __init__.py  common.py  evaluate.py  lm_eval_with_unsloth.py  preprocess.py  push_to_hub.py  train.py
(+4 files in other folders)
